2005-03-19  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/book_properties_dialog.rb:

	- Do not save the book properties on destroy ;
	- Display an error message when trying to set an EAN/ISBN that is already
	  used by another book in the same library ;
	- Do not set the saved ident of the book here, let Library#save do it
	  in order to not duplicate entries.

	* lib/alexandria/ui/new_book_dialog_manual.rb:

	- Forgot to mark some translatable strings ;
	- Display an error message when trying to add a book with an EAN/ISBN 
	  that is already used by another book in the same library.

	* .cvsignore:
	
	Added alexandria.desktop and alexandria.desktop.in.h.
	
2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	* alexandria.desktop.in:

	Add an Icon field.

2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	* genpot.sh:

	 - Remove reference to removed bin/alexandria.

	 - Change reference to alexandria.desktop.in to point to .., so that
	   the script works when run in the po/ directory.

	 - Add a comment explaining that the script should be run from the po/
	   directory.

2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	* post-clean.rb:

	Add this script in order to remove various automatically generated
	files.

2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	Implement i18n of the .desktop file using intltool.

	* alexandria.desktop:

	Removed, as it is now automatically generated.

	* alexandria.desktop.in:

	This is the old .desktop file, with some fields marked for
	translation.

	* po/genpot.sh:

	Call intltool-extract to generate alexandria.desktop.in.h, and pass
	that file to xgettext.

	* pre-setup.rb:

	Call intltool-merge to generate alexandria.desktop with translations.

	* README:

	Mention the dependency on intltool.

2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	* ChangeLog,
	  NEWS:

	Convert to UTF-8.

2005-03-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog_manual.rb:
